# mlops-introduction

./: README.md
1-notebook-in-docker/: .dockerignore  .gitignore  README.md  pyproject.toml  train.ipynb
2-docker-mlflow/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  train.ipynb
