[tool.poetry]
name = "4-docker-mlflow"
version = "0.1.0"
description = "Experiment management using mlflow"
authors = ["hosimesi <hosimesi11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.app.dependencies]
mlflow = "^2.16.0"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
